# haematococcus_lacustris

./: .gitignore  README.md  acknowledgement  mets_to_add.csv  plot_template.json  pyproject.toml  to_do_list
h_lacustris/: add_ec_reactions.py  annotate_genome.py  build_uniprot_map.py  databases.py  utils.py
models/draft/v0.0.0/: Haem_Fasta_Dictionary.xlsx  Hlacustris.xlsx
models/draft/v0.0.1/: hlacustris.json  hlacustris.xlsx
models/draft/v0.0.5/haeplu/: haeplu.faa  haeplu.xlsx
models/draft/v0.0.5/nies144/: nies144.faa  nies144.xlsx
models/draft/v0.0.5/redball/: redball.faa  redball.xlsx
models/draft/v0.0.6/nies144/: nies144.json
models/raw/: Hlacustris.xlsx
scripts/biolog/: 1_biolog_dark.py  1_biolog_light.py  2_plots_dark.py  2_plots_light.py  model_biolog_metrics.ipynb
scripts/biolog/dep/: 1_biolog_biolog_analysis.py  1_tecan_biolog_analysis_.ipynb  2_biolog_growth_decision.py  3_biolog_metrics.py
scripts/cobra/: 0_import_from_excel.py  1_fix_biomass.py  2_add_ec_to_reference.sh  3_build_protein_dicts.sh  3_translate_genes.py  4_add_ec_to_strains.sh  5_fix_biomass_strains.py  6a_fix_cycles.py  6b_get_biolog_metrics.py
scripts/dep/: Dark Biolog data analyzer.ipynb  Light Biolog data analyzer.ipynb  gprs_to_check.ipynb  import_from_excel.py
scripts/dep/notebooks/: 0_biolog_analysis.ipynb  1_growth_decision-Copy1.ipynb  2_model_test_biomass.ipynb  fix_genes.ipynb  model_biolog_metrics-Copy1.ipynb  model_biolog_metrics.ipynb  model_test_leaks.ipynb
scripts/others/: fill_biolog_mets_info.py  map_genes.py
(+2 files in other folders)
